--- a/DominoE/public/index.html
+++ b/DominoE/public/index.html
@@ -4,9 +4,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
     <script src="DominoStone.js"></script>
-    <script src="domino.js"></script>
     <script src="Player.js"></script>
     <script src="app.js"></script>
+    <script src="game.js"></script>
 
 
 </head>
